# electronic_hourglass

./: .cproject  .mxproject  .project  README.md  max7219 Debug (1).launch  max7219 Debug.launch  max7219.ioc  screen_test Debug.launch  screen_test.ioc
Core/Inc/: Accelerometer.h  cell.h  hourglass.h  ili9341.h  main.h  stm32f4xx_hal_conf.h
Core/Src/: cell.c  hourglass.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
CubeIDE project/: .cproject  screen_test.ioc
CubeIDE project/Core/Inc/: main.h
CubeIDE project/Core/Src/: Accelerometer.c
Debug/: makefile  max7219.elf  max7219.list  max7219.map  objects.list  screen_test.elf  screen_test.list  screen_test.map
Debug/Core/Src/: Accelerometer.cyclo  Accelerometer.d  Accelerometer.su  ili9341.d  ili9341.su  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  subdir.mk
accl/: .cproject  accel Debug.launch  accel.ioc
accl/Core/Inc/: stm32f4xx_hal_conf.h
accl/Core/Src/: main.c  stm32f4xx_hal_msp.c
accl/Debug/: accel.elf  accel.list  accel.map  makefile  objects.list
accl/Debug/Core/Src/: Accelerometer.cyclo  Accelerometer.su  lsm303dlhc.d  main.cyclo  main.d  main.su  subdir.mk
accl/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
sandgrain/: CMakeLists.txt  Main.c  cell.c  hourglass.c  hourglass.h
sandgrain_v2/: CMakeLists.txt  cell.c  cell.h  hourglass.c  hourglass.h  hourglass.py  main.c  main.h
sandgrain_v3/: Main.c  cell.c  cell.h  hourglass.c  hourglass.h
